# dungeon-keeper-rpg

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: .gitignore  README.md  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardCard.tsx  Layout.tsx  Navbar.tsx  ProtectedRoute.tsx  TableCard.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  uiStore.ts
src/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
src/routers/: backup.py
