[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-keeper-rpg"
version = "1.0.0"
description = "Sistema completo de RPG D&D 5e"
authors = [{name = "Dungeon Keeper Team"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "python-dotenv>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"